# azure-iot-edge-testprocess

./: .env.backup  deployment.debug.template.json  deployment.template.json
modules/testprocess1/: 2process1program.c  CMakeLists.txt  Dockerfile.amd64  module.json  process1.c  process2.c  runboth.sh
